tests/ptr_bad_constraints.ppig

func main(): i32
{
    let mut val: i32|$ > 10 = 30;
    let mut ptr: *i32 = val; //error
    return 0;
}
